# cosmos_data

./: .gitignore  readme.md
node_dumps/: query_valset.sh  query_valset_remote.sh  readme.md
node_dumps/data/: akash_block_info_formatted_15095285.json  cosmoshub_block_info_formatted_19237098.json  dydx_block_info_formatted_9001705.json  evmos_block_info_formatted_19110795.json  juno_block_info_formatted_14047318.json  osmosis_block_info_formatted_13899126.json  sei_block_info_formatted_59029917.json
node_dumps/time_series/: readme.md
node_dumps/time_series/dydx/: 1.json  14160000.json  2000000.json  21250000.json  28700000.json  6900000.json
node_dumps/time_series/sei/: 1.json  20100000.json  33800000.json  47200000.json  53200000.json  65200000.json  6600000.json  71600000.json  78000000.json  blocks_and_timestamps.csv
node_dumps/total_vp/: akash_total_vp.txt  cosmoshub_total_vp.txt  dydx_total_vp.txt  evmos_total_vp.txt  juno_total_vp.txt  osmosis_total_vp.txt  sei_total_vp.txt
node_dumps/voting_power/: akash.json  cosmoshub.json  dydx.json  evmos.json  juno.json  osmosis.json  sei.json
screenshots/: readme.md
time_series/: readme.md  write_json.sh
time_series/cvptst/: Cargo.toml  README.md
time_series/cvptst/output/: .~lock.dydx.csv#  .~lock.sei.csv#  dydx.csv  sei.csv
time_series/cvptst/src/: main.rs
time_series/dydx/: 11760000.json  16600000.json  19000000.json  23700000.json  26200000.json  4320000.json  9500000.json  blocks_and_timestamps.csv
time_series/sei/: 13200000.json  27200000.json  40800000.json  59400000.json
