[package]
name = "cvptst"
version = "0.1.0"
edition = "2024"
authors = ["Alex Lynham <alex@envoys.io>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
base64 = "0.22.1"
csv = "1.1"

[dependencies.serde_with]
version = "3.12.0"
features = [ "std" ]
